# ideam-data-automator

./: .env.example  .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  CITATIONS.md  README.md  extractor_dinamico.py  extractor_estatico.py.py  ideam-data-automator.bat  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
api/: pyproject.toml
api/app/: caggs.py  catalog.py  db.py  http_utils.py  hydrostats.py  main.py  models.py  normalize.py  ratelimit.py  reliability.py  schema_api.sql  settings.py  stationarity.py
api/app/routers/: analytics.py  catalog_routes.py  export.py  meta.py  preview.py
api/app/services/: exporter.py  fiabilidad_batch.py
api/deploy/: ideam-api.service  ideam-export-cleanup.service  ideam-export-cleanup.timer
api/tests/: conftest.py  test_analytics_math.py  test_api_integration.py  test_build_filters_tz.py  test_client_ip.py  test_coverage_una_query.py  test_db_read_retry.py  test_dias_min_anio.py  test_export_limits.py  test_hydrostats.py  test_meta_rate_limit.py  test_precip_ceiling.py  test_preview_techo.py  test_ratelimit.py  test_ready_cache.py  test_reliability.py  test_spi_latest.py  test_stationarity.py  test_stations_geojson_cap.py
deploy/: .gitattributes  ANTI-IDLE-RECLAIM.md  cloudflared-restart.conf  descargar-bulk.sh  fiabilidad_schema.sql  ideam-backfill.service  ideam-backup.service  ideam-backup.sh  ideam-backup.timer  ideam-delta-healthcheck.conf  ideam-delta.service  ideam-delta.timer  ideam-fiabilidad.service  ideam-fiabilidad.timer  ideam-healthcheck.service  ideam-healthcheck.sh  ideam-healthcheck.timer  ideam-heavy.slice  ideam-idf-refresh.service  ideam-idf-refresh.sh  ideam-idf-refresh.timer  ideam-notify-fail@.service  ideam-watchdog.service  ideam-watchdog.sh  ideam-watchdog.timer  idf_backfill.sh  idf_schema.sql
docs/: HISTORIA.md  RUNBOOK.md  SERVIDOR.md
docs/validacion/: PROCEDIMIENTO-VALIDACION-IDF-EXTERNA.md  RESULTADOS-VALIDACION-IDF.md  SECCION-TESIS-VALIDACION-IDF.md  comparacion-gonzalez2023-10a14.csv  comparacion-gonzalez2023-15a.csv  comparacion-gonzalez2023.csv  gonzalez2023-coeficientes.json  gonzalez2023-cruce-plataforma.json  idf-comparacion-PLANTILLA.csv
packaging/: IDEAM-Data-Automator.spec  ideam_app.py
scripts/: generar_comparacion_idf.py  validar_idf.py
src/ideam_socrata/: __init__.py  __main__.py  batch.py  cli.py  config.py  core.py  engine.py  exporting.py  main.py  physical_ranges.py  query_validation.py  tools.py  transform.py  tui.py  ui.py
src/ideam_socrata/db/: __init__.py  backfill.py  connection.py  copy_loader.py  delta.py  load_estaciones.py  schema.sql  state.py
tests/: test_atomic_export.py  test_batch_helpers.py  test_cli.py  test_connection_tz.py  test_copy_loader_altitudes.py  test_copy_loader_coerce.py  test_copy_loader_espejo_puro.py  test_copy_loader_sanitize.py  test_delta.py  test_generar_comparacion_idf.py  test_idf_sensor_selection.py  test_packaging.py  test_physical_ranges.py  test_query_export_helpers.py  test_soql_quoting.py  test_transform_dedup.py  test_validar_idf.py  test_validation.py
